tests/functional/lang/eval-fail-blackhole.err.exp
error:
       … while evaluating x
         at /pwd/lang/eval-fail-blackhole.nix:5:1:
            4| in
            5| x
             | ^
            6|

       … while evaluating y
         at /pwd/lang/eval-fail-blackhole.nix:2:7:
            1| let
            2|   x = y;
             |       ^
            3|   y = x;

       error: infinite recursion encountered
       at /pwd/lang/eval-fail-blackhole.nix:2:7:
            1| let
            2|   x = y;
             |       ^
            3|   y = x;
